Modify DataQuery to not store separators